--- a/_config.yml
+++ b/_config.yml
@@ -106,15 +106,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Bradley M. Argauer"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  location         : "Melbourne, FL"
+  email            : "Contact@BradleyArgauer.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:your.name@email.com
+       url: mailto:Contact@BradleyArgauer.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
