--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-       url: mailto:Contact@BradleyArgauer.com
+       #url: mailto:Contact@BradleyArgauer.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
