--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ author:
        #url: mailto:Contact@BradleyArgauer.com
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
+      # url: "https://bradleyargauer.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
