--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
    - title: "About"
      url: https://bradleyarg.github.io/minimal-mistakes/about/
    - title: "Resume"
-     url: /Resume/
+     url: https://www.bradleyargauer.com/Resume/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
